# EGCIENET_pipeline

./: .gitattributes  .gitignore  CMakeLists.txt
build-debug/: Makefile  cmake_install.cmake
include/acquisition/: ImageFolderSource.h  ImageSource.h  VideoSource.h
include/common/: BlockingQueue.h  DetectionResult.h  FrameData.h  PreprocessData.h  ScopeTimer.h  Timer.h
include/evaluation/: EngineValidator.h
include/infer/: EngineBuilder.h  Int8Calibrator.h  TensorRTCommon.h  TensorRTInfer.h
include/pipeline/: InspectionPipeline.h
include/postprocess/: SegPostprocessor.h
include/preprocess/: CudaPreprocessor.h  Preprocessor.h
include/utils/: BaselineSaver.h  FileLogger.h  Int8CompareSaver.h
include/visualize/: Visualizer.h
scripts/: blade.yaml  build.sh  build_fp16_engine.sh  build_fp32_engine.sh  build_int8_engine.sh  calibrate_int8.sh  clean.sh  run_server.sh  test_client.py  test_clint.sh  test_inference.sh  validate_engines.sh
src/: main.cpp
src/acquisition/: ImageFolderSource.cpp  VideoSource.cpp
src/common/: Timer.cpp
src/evaluation/: EngineValidator.cpp
src/infer/: EngineBuilder.cpp  Int8Calibrator.cpp  TensorRTCommon.cpp  TensorRTInfer.cpp
src/pipeline/: InspectionPipeline.cpp
src/postprocess/: SegPostprocessKernel.cu  SegPostprocessor.cpp
src/preprocess/: CudaPreprocessKernel.cu  CudaPreprocessor.cpp
src/tools/: build_engine.cpp  calibrate_main.cpp  infer_image.cpp  validate_engines.cpp
src/utils/: BaselineSaver.cpp  FileLogger.cpp  Int8CompareSaver.cpp
src/visualize/: VisualizeKernel.cu  Visualizer.cpp
